--- a/EX220310/TestAlex/TestAlex.csproj
+++ b/EX220310/TestAlex/TestAlex.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pokemonlibrary\Pokemonlibrary.csproj" />
+  </ItemGroup>
+
 </Project>
